[package]
name = "raml_spec"
version = "0.1.0"
authors = ["Egor Ivkov <e.o.ivkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
thiserror = "1.0"
uriparse = "0.6.3"

[dev-dependencies]
anyhow = "1.0"